--- a/css/style.scss
+++ b/css/style.scss
@@ -104,7 +104,7 @@ body {
     .hero_area {
         height: auto;
         background-image: none;
-        background-color: #e1f3fd;
+        background-color: #28e32b;
 
         &::after {
             display: none;
