--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body {
 .hero_area {
     height: 136vh;
     position: relative;
-    background-image: url(../images/hero-bg.png);
+   background-color: #5754e2;
     background-size: cover;
 }
 
@@ -98,7 +98,7 @@ body {
     margin: 10px 30px;
     padding: 0;
     /* menu */
-    color: #310fdc;
+    color: white;
     text-align: center;
     position: relative;
     text-transform: uppercase;
@@ -120,12 +120,12 @@ body {
 
 .custom_nav-container .navbar-nav .nav-item.active .nav-link,
 .custom_nav-container .navbar-nav .nav-item:hover .nav-link {
-    color: #2a2132;
+    color: black;
 }
 
 .custom_nav-container .navbar-nav .nav-item.active .nav-link::before,
 .custom_nav-container .navbar-nav .nav-item:hover .nav-link::before {
-    background-color: #2a2132;
+    background-color: #fbfbfb;
 
 }
 
@@ -207,6 +207,8 @@ a:focus {
 /*sección del encabezado final*/
 
 /* sección slider */
+
+
 .slider_section {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -216,7 +218,7 @@ a:focus {
     align-items: center;
     position: relative;
     z-index: 2;
-    color: #3b3a3a;
+    color: #ffffff;
 }
 
 .slider_section .row {
@@ -737,7 +739,7 @@ a:focus {
 
 /* end contact section */
 .info_section {
-    background-color: #211d25;
+    background-color: #5754E2;
     color: #ffffff;
     font-family: 'Poppins', sans-serif;
 }
@@ -782,7 +784,7 @@ a:focus {
 
 /* footer section*/
 .footer_section {
-    background-color: #211d25;
+    background-color: #5754E2;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -805,5 +807,8 @@ a:focus {
     color: #ffffff;
 }
 
+.cambiafondo{
+    background-color: #5754E2;
+}
 /*# sourceMappingURL=style.css.map */
 
