--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,8 @@ a:focus {
 .slider_section .detail_box .btn-box .btn-1 {
     display: inline-block;
     padding: 7px 0px;
-    background-color: #0fcfdc;
+    background-color: #5754E2;
+    border: 3px solid black;
     color: #ffffff;
     border-radius: 30px;
     margin-right: 5px;
@@ -469,7 +470,7 @@ a:focus {
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(15, 207, 220, 0.8);
+    background-color: rgba(87, 84, 226, 0.8);
     z-index: 0;
 
 }
@@ -631,7 +632,7 @@ a:focus {
     background-repeat: no-repeat;
     background-size: 15px;
     background-position: center;
-    background-color: #0fcfdc;
+    background-color: #5754E2;
     margin: 0 5px;
 }
 
@@ -726,7 +727,7 @@ a:focus {
 .contact_section .contact_form-container button {
     display: inline-block;
     padding: 12px 50px;
-    background-color: #0fcfdc;
+    background-color: #5754E2;
     color: #ffffff;
     border-radius: 0;
     margin-top: 35px;
